# vsomeip3_example

./: .gitignore  CMakeLists.txt  README.md  compile.bash
config/: helloworld-client.json  helloworld-service.json  vsomeip-tcp-client.json  vsomeip-tcp-service.json  vsomeip3_pi4.json  vsomeip3_ubuntu2204.json
run_scripts/: run_helloworld_client.bash  run_helloworld_service.bash  run_request.bash  run_response.bash
src/: CMakeLists.txt  hello_world_client.hpp  hello_world_service.hpp  request-sample.cpp  response-sample.cpp
